Fixing conf editor horizontal scroll on narrow screens

--- a/css/codemirror.css
+++ b/css/codemirror.css
@@ -160,6 +160,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
 .CodeMirror {
   position: absolute;
   overflow: hidden;
+  width: 97%;
 }
 
 .CodeMirror-scroll {
